setup/archive/istio/http-slainte-internal-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-slainte-internal-gateway
  namespace: istio-system
  annotations:
    metallb.universe.tf/address-pool: default-addresspool
    service.beta.kubernetes.io/load-balancer-source-ranges: |
      10.219.0.0/16,
      10.242.0.0/16,
      172.16.0.0/12,
      192.168.0.0/16
spec:
  gatewayClassName: istio
  addresses:
    - type: IPAddress
      value: 10.242.64.201
  listeners:
  # HTTP → HTTPS Redirect
  - name: http
    port: 80
    protocol: HTTP
    # redirect HTTP to HTTPS
    tls:
      mode: None
    allowedRoutes:
      namespaces:
        from: All

  # HTTPS Termination
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: slainte-intranet-tls-secret
    allowedRoutes:
      namespaces:
        from: Same
---
