setup/archive/istio/istio_kiali.yaml
---
# HTTPRoute routing for host ${K8S_ENVIRONMENT}.istio-kiali.slainte.at to kiali service
apiVersion: networking.istio.io/v1beta1
kind: HTTPRoute
metadata:
  name: istio-kiali-dashboard
  namespace: istio-system
spec:
  host:
    - "${K8S_ENVIRONMENT}.istio-kiali.slainte.at"
  gateways:
    - "istio-system/http-slainte-internal-gateway"
  rules:
    - matches:
        - uri:
            prefix: /kiali/     # adjust if Kiali is served at a different basePath    
      forwardTo:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301              
---
